Fix bug with jquery animation looking jumpy on quiz page switch

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.initially-hidden1 {
+.initially-hidden {
   display: none;
 }
 
@@ -21,6 +21,11 @@ body {
   background-color: #e3eaf7;
 }
 
+.quiz-page {
+  /* jQuery animation behaves weird with 0px padding */
+  padding-top: 1px;
+}
+
 button {
   background-color: #e0e0e0;
 }
@@ -31,4 +36,8 @@ button {
   margin-top: 50px;
   min-width: 150px;
   width: 50%;
+}
+
+#quiz button {
+  margin-top: 15px;
 }
